@@ -26,52 +26,54 @@ public class BmiServiceTest {
     @Mock
     BmiMapper bmiMapper;
 
+    /**
+     * GETテスト
+     */
     @Test
-    public void 全てのユーザーが正常に返されること() throws Exception {
+    public void 全てのユーザーが正常に返されること() {
         //Arrange　スタブするモックの動きを決める
-        List<BodyData> mockBodyDataList = Arrays.asList(
+        List<BodyData> bodyData = List.of(
                 new BodyData(1, "タナカ　イチロウ", 20, 171.5, 60.2),
                 new BodyData(2, "スズキ　ジロウ", 18, 181.0, 88.0),
                 new BodyData(3, "ムラタ　サブロウ", 26, 167.9, 101.3)
         );
-
-        when(bmiMapper.findAll()).thenReturn(mockBodyDataList);
+        doReturn(bodyData).when(bmiMapper).findAll();
 
         //Act
-        List<BodyData> bodyDataList = bmiService.findAll();
+        List<BodyData> actual = bmiService.findAll();
 
         //Assert
-        assertThat(bodyDataList).isNotNull();
-        assertThat(bodyDataList.size()).isEqualTo(3);
+        assertThat(actual).isEqualTo(bodyData);
 
         //スタブの呼び出しを検証
-        verify(bmiMapper, times(1)).findAll();
+        verify(bmiMapper).findAll();
 
     }
 
     @Test
     public void 存在する名前の頭文字を指定した時に正常にユーザーが返されること() {
-        //Assert
-        String startsWith = "タ";
-        List<BodyData> mockBodyDataList = Arrays.asList(
+        // Arrange
+        List<BodyData> HdBodydata = Arrays.asList(
                 new BodyData(1, "タナカ イチロウ", 20, 171.5, 60.2)
         );
+        when(bmiMapper.findByNameStartingWith("タ")).thenReturn(HdBodydata);
 
-        when(bmiMapper.findByNameStartingWith(startsWith)).thenReturn(mockBodyDataList);
+        // Act
+        List<BodyData> actualList = bmiService.findByHeadName("タ");
 
-        //Act
-        List<BodyData> bodyDataList = bmiService.findByNamesStartingWith(startsWith);
+        // Assert
+        assertThat(actualList).isNotNull();
+        assertThat(actualList.size()).isEqualTo(1);
+        BodyData actual = actualList.get(0);
+        assertThat(actual).isEqualToComparingFieldByField(new BodyData(1, "タナカ イチロウ", 20, 171.5, 60.2));
+        assertThat(actual.getBmi()).isEqualTo(20.46766228357232);
 
-        //Assert
-        assertThat(bodyDataList).isNotNull();
-        assertThat(bodyDataList.size()).isEqualTo(1);
-        assertThat(bodyDataList.get(0).getName()).isEqualTo("タナカ イチロウ");
-
-        verify(bmiMapper, times(1)).findByNameStartingWith(startsWith);
+        //スタブの呼び出しを検証
+        verify(bmiMapper, times(1)).findByNameStartingWith("タ");
     }
 
     @Test
-    public void 存在するユーザーのIDを指定したときに正常にユーザーが返されること() throws Exception {
+    public void 存在するユーザーのIDを指定したときに正常にユーザーが返されること() {
         //Arrange
         doReturn(Optional.of(new BodyData(2, "スズキ　ジロウ", 18, 181.0, 88.0))).when(bmiMapper).findById(2);
 
@@ -88,12 +90,38 @@ public class BmiServiceTest {
 
     //例外をthrowする場合の検証はどう書くのか　assertThatThrowBy　DoNothing
     @Test
-    public void 存在しないIDを指定した場合は例外が発生すること() throws DataNotFoundException {
-        doReturn(Optional.empty()).when(bmiMapper).findById(1);
+    public void 存在しないIDを指定した場合は例外が発生すること() {
+        //Arrange
+        doReturn(Optional.empty()).when(bmiMapper).findById(100);
+
+        //Assert
         assertThatThrownBy(() -> {
-            bmiService.findName(1);
+            bmiService.findName(100);
         }).isInstanceOf(DataNotFoundException.class)
                 .hasMessage("Data not found");
+
+        //スタブの呼び出しを検証
+        verify(bmiMapper, times(1)).findById(100);
+
+    }
+
+    /**
+     * POSTコード
+     */
+    @Test
+    public void 正常に新規のユーザーが登録できること() {
+        // Arrange
+        BodyData newBodyData = new BodyData("トヨタ トミ", 26, 163.4, 53.3);
+
+        //Act
+        doNothing().when(bmiMapper).insert(newBodyData);
+
+        //Assert
+        bmiService.insert(newBodyData.getName(), newBodyData.getAge(), newBodyData.getHeight(), newBodyData.getWeight());
+
+        // スタブの呼び出しを検証
+        verify(bmiMapper, times(1)).insert(any(BodyData.class));
+
     }
 
 }
